// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publishToRegistry publishes multiple packages in dependency order 1`] = `
"[log] Validating new package versions...

[log] Package versions are OK to publish:
  • lib@1.0.0
  • app@1.0.0

[log] Validating no private package among package dependencies
[log]   OK!

[log] Publishing - lib@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/lib)

[log] Published! - lib@1.0.0

[log] Publishing - app@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/app)

[log] Published! - app@1.0.0"
`;

exports[`publishToRegistry skips private packages 1`] = `
"[log] Skipping publishing the following packages:
  • private-pkg is private

[log] Validating new package versions...

[log] Package versions are OK to publish:
  • foo@1.0.0

[log] Validating no private package among package dependencies
[log]   OK!

[log] Publishing - foo@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/foo)

[log] Published! - foo@1.0.0"
`;

exports[`publishToRegistry throws on publish failure 1`] = `
"[log] Validating new package versions...

[log] Package versions are OK to publish:
  • foo@1.0.0

[log] Validating no private package among package dependencies
[log]   OK!

[log] Publishing - foo@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/foo)

[warn] Publishing foo@1.0.0 failed. Output:

network error

[log] Retrying... (1/3)

[warn] Publishing foo@1.0.0 failed. Output:

network error

[log] Retrying... (2/3)

[warn] Publishing foo@1.0.0 failed. Output:

network error

[log] Retrying... (3/3)

[error] Publishing foo@1.0.0 failed. Output:

network error

[error] Something went wrong with publishing (see above for details). The following packages were NOT published:
  • foo@1.0.0"
`;

exports[`publishToRegistry with concurrency > 1 publishes independent packages in parallel 1`] = `
"[log] Validating new package versions...

[log] Package versions are OK to publish:
  • foo@1.0.0
  • bar@1.0.0
  • baz@1.0.0
  • qux@1.0.0
  • quux@1.0.0

[log] Validating no private package among package dependencies
[log]   OK!

[log] Publishing - foo@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/foo)

[log] Publishing - bar@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/bar)

[log] Publishing - baz@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/baz)

[log] Published! - foo@1.0.0

[log] Publishing - qux@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/qux)

[log] Published! - bar@1.0.0

[log] Publishing - quux@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/quux)

[log] Published! - baz@1.0.0

[log] Published! - qux@1.0.0

[log] Published! - quux@1.0.0"
`;

exports[`publishToRegistry with concurrency > 1 throws and shows recovery info on failure 2`] = `
"[log] Validating new package versions...

[log] Package versions are OK to publish:
  • pkg3@1.0.0
  • pkg2@1.0.0
  • pkg1@1.0.0
  • pkg4@1.0.0
  • pkg5@1.0.0

[log] Validating no private package among package dependencies
[log]   OK!

[log] Publishing - pkg3@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/pkg3)

[log] Publishing - pkg4@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/pkg4)

[log] Publishing - pkg5@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/pkg5)

[warn] Publishing pkg5@1.0.0 failed. Output:

oh no

[log] Retrying... (1/3)

[warn] Publishing pkg5@1.0.0 failed. Output:

oh no

[log] Retrying... (2/3)

[warn] Publishing pkg5@1.0.0 failed. Output:

oh no

[log] Retrying... (3/3)

[error] Publishing pkg5@1.0.0 failed. Output:

oh no

[log] Published! - pkg3@1.0.0

[log] Publishing - pkg2@1.0.0 with tag latest
[log]   publish command: publish --registry http://localhost:99999 --tag latest --loglevel warn
[log]   (cwd: <root>/packages/pkg2)

[warn] Publishing pkg2@1.0.0 failed. Output:

oh no

[log] Retrying... (1/3)

[warn] Publishing pkg2@1.0.0 failed. Output:

oh no

[log] Retrying... (2/3)

[warn] Publishing pkg2@1.0.0 failed. Output:

oh no

[log] Retrying... (3/3)

[error] Publishing pkg2@1.0.0 failed. Output:

oh no

[log] Published! - pkg4@1.0.0

[error] Something went wrong with publishing (see above for details). The following packages were NOT published:
  • pkg1@1.0.0
  • pkg2@1.0.0
  • pkg5@1.0.0

[warn] These packages and versions were successfully published, but will NOT be reflected in your local package.json files:
  • pkg3@1.0.0
  • pkg4@1.0.0

To recover from this, run "beachball sync" to synchronize local package.json files with the registry."
`;

exports[`publishToRegistry with packToPath packs packages 1`] = `
"[log] Validating new package versions...

[log] Package versions are OK to publish:
  • lib@1.0.0
  • app@1.0.0

[log] Validating no private package among package dependencies
[log]   OK!

[log] Packing - lib@1.0.0
[log]   (cwd: <root>/packages/lib)

[log] lib-1.0.0.tgz

[log] Packed lib@1.0.0 to <packPath>/1-lib-1.0.0.tgz
[log] Packing - app@1.0.0
[log]   (cwd: <root>/packages/app)

[log] app-1.0.0.tgz

[log] Packed app@1.0.0 to <packPath>/2-app-1.0.0.tgz"
`;

exports[`publishToRegistry with packToPath throws with packing error message on pack failure 1`] = `
"[log] Validating new package versions...

[log] Package versions are OK to publish:
  • foo@1.0.0

[log] Validating no private package among package dependencies
[log]   OK!

[log] Packing - foo@1.0.0
[log]   (cwd: <root>/packages/foo)

[log] pack error

[error] Packing foo@1.0.0 failed (see above for details)

[error] Something went wrong with packing packages! No packages were published, so you can address the issue and try again."
`;
